# Ocasta-Bare

./: Cargo.toml  README.md
src/: codec.rs  errors.rs  lib.rs  main.rs  o3.rs  util.rs  v2.rs  v3.rs  websocket.rs
static/: index.json
