[package]
name = "ocastabare"
description = "Rustified TompHTTP Bare Server"
repository = "https://github.com/Project-Ocasta/Ocasta-Bare"
version = "0.1.0"
license = "GPL-3.0"
edition = "2021"

[dependencies]
argh = "0.1"
axum = { version = "0.6", features = ["ws"] }
futures-util = "0.3"
memory-stats = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
