[package]
name = "ocastabare"
description = "Rustified TompHTTP Bare Server"
repository = "https://github.com/Project-Ocasta/Ocasta-Bare"
version = "0.1.0"
license = "GPL-3.0"
edition = "2021"

[features]
default = ["v2", "v3"]
v1 = ["proxy"]
v2 = ["proxy", "chrono", "getrandom", "hex"]
v3 = ["proxy"]
proxy = ["reqwest", "axum/ws", "tokio-tungstenite", "futures-util"]

[dependencies]
argh = "0.1"
axum = "0.6"
chrono = { version = "0.4", optional = true }
futures-util = { version = "0.3", optional = true }
memory-stats = "1"
getrandom = { version = "0.2", optional = true }
hex = { version = "0.4", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"], optional = true }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"], optional = true }
